fix: force arm64 on fedora
primarily for containerised compute at edge builds

--- a/images/rpmbuild-fedora/Dockerfile
+++ b/images/rpmbuild-fedora/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/geonet/base-images/fedora:38
+FROM --platform=linux/arm64 ghcr.io/geonet/base-images/fedora:38
 # Installing tools needed for rpmbuild
 RUN dnf update -y && \
     dnf install -y \
