--- a/images/rpmbuild-fedora/Dockerfile
+++ b/images/rpmbuild-fedora/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/geonet/base-images/fedora:38
+FROM ghcr.io/geonet/base-images/fedora:38-aarch64
 # Installing tools needed for rpmbuild
 RUN dnf update -y && \
     dnf install -y \
