--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -34,6 +34,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{ fromJSON(needs.prepare.outputs.matrix) }}
-    uses: GeoNet/Actions/.github/workflows/reusable-container-image-scan.yml@main
+    uses: GeoNet/Actions/.github/workflows/reusable-container-image-scan.yml@image-scan-hotfix
     with:
       imageRefs: ${{ fromJSON(toJSON(matrix)).destination }}
