--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -19,6 +19,8 @@ docker.io:
       - 'bookworm-slim'
     hadolint/hadolint:
       - 'v2.12.0-alpine'
+    hashicorp/packer:
+      - '1.11.2'
     python:
       - 3.11.4-bullseye
       - 3.12.2-bullseye
