--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -27,6 +27,8 @@ docker.io:
       - 'v2.12.0-alpine'
     hashicorp/packer:
       - '1.11.2'
+    hashicorp/tfc-agent:
+      - '1.17.3'
     python:
       - 3.11.4-bullseye
       - 3.12.2-bullseye
