--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -38,6 +38,7 @@ docker.io:
     golang:
       - 1.21.12-alpine3.20
       - 1.22.7-alpine3.20
+      - 1.23.4-alpine3.20
       - 1.23.4-alpine3.21
     koalaman/shellcheck-alpine:
       - v0.9.0
