--- a/config.yaml
+++ b/config.yaml
@@ -17,8 +17,8 @@ build:
     destination: ghcr.io/geonet/base-images/alpine-iputils:3.18
   - source: ./images/alpine-xslt/image.yaml
     destination: ghcr.io/geonet/base-images/alpine-xslt:3.18
-  - source: ./images/alpine-gdal/image.yaml
-    destination: ghcr.io/geonet/base-images/alpine-gdal:3.18
+  - source: ./images/alpine-gdal/Dockerfile
+    destination: ghcr.io/geonet/base-images/alpine-gdal:3.21
   - source: ./images/texlive/image.yaml
     destination: ghcr.io/geonet/base-images/texlive:latest
   - source: ./images/python-arcgis/Dockerfile
