--- a/config.yaml
+++ b/config.yaml
@@ -33,6 +33,9 @@ build:
   - source: ./images/rpmbuild-fedora/Dockerfile
     destination: ghcr.io/geonet/base-images/rpmbuild-fedora:latest
     buildOnMainOnly: true
+  - source: ./images/ubuntu-pdk/Dockerfile
+    destination: ghcr.io/geonet/base-images/ubuntu-pdk:latest
+    buildOnMainOnly: true
   - source: ./images/alpine-nginx-rtmp-stream/Dockerfile
     destination: ghcr.io/geonet/base-images/nginx-rtmp:v1.2.2
   - source: ./images/alpine-ffmpeg/Dockerfile
