--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -41,7 +41,7 @@ jobs:
           DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
           DOCKER_USER: geonetci
           RUN_ECR: ${{ github.ref_name == 'main' || 'FALSE' }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_CI_USER_TOKEN }}
         run: |
           auth_tmp=$(mktemp)
           echo '{}' > $auth_tmp  # JSON formating is required
