fix: add python3.11-rpm-macros to rpmbuild image
To avoid the need to install during the build steps in GitHub CI

--- a/images/rpmbuild-almalinux8/Dockerfile
+++ b/images/rpmbuild-almalinux8/Dockerfile
@@ -13,7 +13,7 @@ RUN dnf update -y && \
   libxml2-devel make ncurses ncurses-devel nodejs npm octave \
   openssl pango pango-devel perl-devel python3.11 qt5-qtwebengine \
   rpm-build rpmdevtools rpm-sign rpmlint shadow-utils systemd unzip \
-  python3.11-devel python3.11
+  python3.11-devel python3.11 python3.11-rpm-macros
 
 COPY rpmlintrc.toml /etc/xdg/rpmlint/rpmlintrc.toml
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip
