--- a/images/rpmbuild-centos-stream9/Dockerfile
+++ b/images/rpmbuild-centos-stream9/Dockerfile
@@ -10,8 +10,9 @@ RUN dnf module enable -y nodejs:20 && \
     fontconfig-devel freetype freetype-devel gcc gcc-c++ git glibc \
     kernel-devel libgfortran libxml2 libxml2-devel make ncurses \
     ncurses-devel nodejs npm python3.11-devel python3.11 \
-    openssl pango pango-devel perl-devel python3.11 qt5-qtbase \
-    rpm-build rpmdevtools rpm-sign rpmlint shadow-utils systemd unzip
+    openssl pango pango-devel perl-devel python3.11 python3.11-rpm-macros \
+    qt5-qtbase rpm-build rpmdevtools rpm-sign rpmlint \
+    shadow-utils systemd unzip
 
 COPY rpmlintrc.toml /etc/xdg/rpmlint/rpmlintrc.toml
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
