feat: add mado image for markdown lint
faster markdown lint implementation in rust

--- a/config.yaml
+++ b/config.yaml
@@ -40,3 +40,5 @@ build:
     destination: ghcr.io/geonet/base-images/nginx-rtmp:v1.2.2
   - source: ./images/alpine-ffmpeg/Dockerfile
     destination: ghcr.io/geonet/base-images/alpine-ffmpeg:latest
+  - source: ./images/mado/Dockerfile
+    destination: ghcr.io/geonet/base-images/mado:v0.2.2
