--- a/images/dell-emc-cli/Containerfile
+++ b/images/dell-emc-cli/Containerfile
@@ -1,4 +1,4 @@
-FROM docker.io/almalinux:8.9
+FROM ghcr.io/geonet/base-images/almalinux:8.10
 
 COPY UnisphereCLI-Linux-64-x86-en_US-5.4.0.2220877-1.x86_64.rpm /tmp
 RUN dnf install -y /tmp/UnisphereCLI-Linux-64-x86-en_US-5.4.0.2220877-1.x86_64.rpm
