--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -53,6 +53,8 @@ docker.io:
       - 22.9-alpine3.20
     earthscope/ringserver:
       - 'v4.0.1'
+    victoriametrics/victoria-metrics:
+      - 'v1.117.1'
 quay.io:
   tls-verify: true
   images:
