--- a/images/python-arcgis/pyproject.toml
+++ b/images/python-arcgis/pyproject.toml
@@ -1,15 +1,23 @@
 [tool.poetry]
 name = "arcgis-base-image"
-version = "1.0.0"
+version = "2.0.0"
 description = "Base image containing Python and arcgis"
 authors = ["GeoNet"]
 
 [tool.poetry.dependencies]
-python = "3.11.9"
+python = "3.11.12"
 arcgis = "2.4.1"
 numpy = "1.26.4"
 pandas = "2.2.3"
 geopandas = "1.0.1"
+python-dotenv = "1.0.1"
+boto3 = "1.34.51"
+toml = "0.10.2"
+datadog-api-client = "2.23.0"
+pyshp = "2.3.1"
+gdal = "3.6.2"
+azure-storage-blob = "12.25.0"
+arcgis-mapping = "4.31.0"
 
 [build-system]
 requires = ["poetry-core"]
