--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -27,6 +27,7 @@ docker.io:
     hashicorp/tfc-agent:
       - '1.17.3'
     python:
+      - 3.11-bookworm
       - 3.11.4-bullseye
       - 3.11.9-bullseye
       - 3.12.2-bullseye
