feat: add almalinux 9.6 and 10 rpmbuild images
Add rpmbuild images using AlmaLinux 9.6 and new release AlmaLinux 10
so we can use these to test package updates

--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,12 @@ build:
   - source: ./images/rpmbuild-almalinux8/Dockerfile
     destination: ghcr.io/geonet/base-images/rpmbuild-almalinux8:latest
     buildOnMainOnly: true
+  - source: ./images/rpmbuild-almalinux9/Dockerfile
+    destination: ghcr.io/geonet/base-images/rpmbuild-almalinux9:latest
+    buildOnMainOnly: true
+  - source: ./images/rpmbuild-almalinux10/Dockerfile
+    destination: ghcr.io/geonet/base-images/rpmbuild-almalinux10:latest
+    buildOnMainOnly: true
   - source: ./images/rpmbuild-centos-stream9/Dockerfile
     destination: ghcr.io/geonet/base-images/rpmbuild-centos-stream9:latest
     buildOnMainOnly: true
