--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -3,6 +3,8 @@ docker.io:
   images-by-semver:
     vmware/govc: ">= v0.37.0"
     grafana/grafana-oss: ">= 11.1.0"
+  images-by-tag-regex:
+    golang: ^1\.23(\.[0-9]+)?-alpine3\.21$
   images:
     alpine:
       - '3.21'
@@ -34,16 +36,6 @@ docker.io:
       - 3.12.2-alpine3.19
       - 3.11.9-alpine3.19
       - 3.11.4-alpine3.18
-    golang:
-      - 1.21.12-alpine3.20
-      - 1.22.7-alpine3.20
-      - 1.23.4-alpine3.20
-      - 1.23.4-alpine3.21
-      - 1.23.5-alpine3.20
-      - 1.23.5-alpine3.21
-      - 1.23.6-alpine3.20
-      - 1.23.6-alpine3.21
-      - 1.23-alpine3.21
     koalaman/shellcheck-alpine:
       - v0.9.0
     tonistiigi/binfmt:
