feat: add vmagent image
This is part of the victoria metrics system, it can be used to monitor the system itself or as an alternative to prometheus

--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -54,6 +54,8 @@ docker.io:
       - 'v1.28.0'
     victoriametrics/vmalert:
       - 'v1.125.1'
+    victoriametrics/vmagent:
+      - 'v1.126.0'
 quay.io:
   tls-verify: true
   images:
