--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -36,6 +36,7 @@ docker.io:
       - '1.17.3'
     python:
       - 3.11-bookworm
+      - 3.12.9-bookworm
       - 3.11.4-bullseye
       - 3.11.9-bullseye
       - 3.12.2-bullseye
