--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -62,6 +62,8 @@ docker.io:
       - 'v1.125.1'
     victoriametrics/vmagent:
       - 'v1.126.0'
+    risingwavelabs/risingwave:
+      - 'v2.6.0'
 quay.io:
   tls-verify: true
   images:
