--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -64,6 +64,8 @@ docker.io:
       - 'v1.126.0'
     risingwavelabs/risingwave:
       - 'v2.6.0'
+    eclipse-mosquitto:
+      - '2.0.22'
 quay.io:
   tls-verify: true
   images:
