feat: add python on debian trixie
Add python on debian trixie

--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -38,6 +38,7 @@ docker.io:
     hashicorp/tfc-agent:
       - '1.17.3'
     python:
+      - 3.11-trixie
       - 3.11-bookworm
       - 3.12.9-bookworm
       - 3.11.4-bullseye
