--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -17,6 +17,8 @@ docker.io:
       - '8.10-minimal'
       - '9.7'
       - '9.7-minimal'
+      - '10.1'
+      - '10.1-minimal'
     redhat/ubi8:
       - '8.10'
     redhat/ubi8-minimal:
