--- a/sync-ghcr.yml
+++ b/sync-ghcr.yml
@@ -90,7 +90,8 @@ quay.io:
     prometheus/snmp-exporter: ">= v0.26.0"
     prometheus/blackbox-exporter: ">= v0.25.0"
     prometheus/alertmanager: ">= v0.28.1"
-
+    prometheus/node-exporter: ">= v1.10.2"
+    
 cgr.dev:
   tls-verify: true
   images:
