fix: update alpine-gdal image name
Forgot to do this in this PR: https://github.com/GeoNet/base-images/pull/402
Have made it "latest" so that a naming mismatch doesn't happen again.

--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ build:
   - source: ./images/alpine-xslt/image.yaml
     destination: ghcr.io/geonet/base-images/alpine-xslt:3.18
   - source: ./images/alpine-gdal/Dockerfile
-    destination: ghcr.io/geonet/base-images/alpine-gdal:3.21
+    destination: ghcr.io/geonet/base-images/alpine-gdal:latest
   - source: ./images/texlive/image.yaml
     destination: ghcr.io/geonet/base-images/texlive:latest
   - source: ./images/python-arcgis/Dockerfile
